syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// WarlockTalents message.
message WarlockTalents {
}

// END GENERATED

message WarlockOptions {
	enum Summon {
		NoSummon = 0;
		Imp = 1;
		Voidwalker = 2;
		Succubus = 3;
		Felhunter = 4;
		Felguard = 5;
	}

	Summon summon = 1;
	bool detonate_seed = 2;
	bool use_item_swap_bonus_stats = 3;
}

message AfflictionWarlock {
	message Rotation {
	}

	message Options {
		WarlockOptions class_options = 1;
		int32 exhale_window = 6;
	}
	Options options = 1;
}

message DemonologyWarlock {
	message Rotation {
	}

	message Options {
		WarlockOptions class_options = 1;
	}
	Options options = 1;
}

message DestructionWarlock {
	message Rotation {
	}

	message Options {
		WarlockOptions class_options = 1;
	}
	Options options = 1;
}
